--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ p {
   padding: 0px; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #2dad8f; }
+  color: #001f4e; }
 
 body {
   background-color: #f1f1f145 !important;
