--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,6 +679,10 @@ header {
       margin-top: 10px;
   }
 
+  .gallery-img{
+    margin-top: 10px;
+  }
+
 .copy {
   padding: 20px;
   background: #001f4e;
